# robot_write

./: README.en.md  README.md  README.md~  test.md
ImageDetection/ai/: CMakeLists.txt  readme.txt
ImageDetection/ai/imageDetection/: CMakeLists.txt
ImageDetection/ai/imageDetection/predictImage/src/: predict_image.cpp
MnistCNN/: data.py  func.py  module.py  readme.txt  train.py
RobotWrite/: CMakeLists.txt  readme.txt
RobotWrite/cmake/: FindAubo.cmake  FindOpenCV.cmake
RobotWrite/src/: CMakeLists.txt  Kinect.cpp  Kinect.h  MainWindow.cpp  MainWindow.h  main.cpp
doc/: .~lock.【工作说明书】SOW-RobotWritingDemo（一期）_schedule.xls#  【工作说明书】SOW-RobotWritingDemo（一期）_schedule.xls
write/: .gitignore  CMakeLists.txt
